--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 
 .left-text {
-    padding-right: 3rem;
+    padding-right: 2rem;
 }
 
 .left-text h1 {
@@ -53,8 +53,6 @@ body {
 .left-text p {
     width: 500px;
     color: var(--secondary-color);
-  padding-top:15px;
-  line-height:25px;
 }
 
 .top-right {
@@ -83,7 +81,6 @@ body {
     background-color: var(--secondary-color);
     border-radius: 8px;
     padding: 10px 20px 30px 20px;
-
     font-size: 14px;
 
 }
@@ -114,7 +111,6 @@ input[type=submit] {
     background-color: var(--primary-color2);
     color: var(--secondary-color);
     font-weight: bold;
-  cursor:pointer;
 }
 
 #terms {
@@ -137,20 +133,28 @@ input[type=submit] {
         background-image: url(images/bg-intro-mobile.png);
     }
 
+
+
+
     .main-body {
         display: grid;
-        width: 50%;
+        justify-content: center;
+        width: 80%;
         margin: auto;
-        margin-top: 3rem;
+      padding-top: 3rem;
+
 
     }
 
+    .left-text {
+        padding-right:0;
+    }
+    
 
     .left-text h1 {
-        width: 250px;
+        width: 280px;
         font-size: 25px;
         text-align: center;
-        margin: auto;
         padding-bottom: 20px;
 
     }
@@ -161,14 +165,13 @@ input[type=submit] {
         font-size: 14px;
         line-height: 20px;
         padding-bottom: 40px;
-        margin: auto;
-        padding-left: 10px;
+     
     }
 
     .form-container {
         width: 100%;
         font-size: 14px;
-        margin-bottom: 3rem;
+        
 
     }
 
@@ -199,28 +202,9 @@ input[type=submit] {
 
     }
 
-}
 
-
-@media screen and (max-width: 800px) {
-
-  .left-text h1 {
-        width: 220px;
-        font-size: 25px;
-        padding-bottom: 15px;
-
-    }
-  
-    .left-text p {
-        width: 230px;
-
-        font-size: 14px;
-        line-height: 23px;
-
+    .form-container{
+        margin-bottom: 3rem;
     }
 
-  
 }
-
-
-     
